--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,13 @@
 version: "3.9"
 
 services:
-
   db:
     image: postgres
     restart: always
+    networks:
+      - acc-backend
     environment:
+      - POSTGRES_DB=book_schedule
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
     volumes:
@@ -16,3 +18,7 @@ services:
 volumes:
   db:
     driver: local
+
+networks:
+  acc-backend:
+    driver: bridge
